--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 body {
-  margin-top: 200px;
+  margin-top: 120px;
   background-color: #474646;
   text-align: center;
   font-family: sans-serif;
@@ -13,6 +13,7 @@ body {
   color: #222;
   text-align: center;
   font-size: 60px;
+  margin-bottom: 40px;
 }
 
 .field {
